Bug 1513473 - Re-enable the Text Encoding menu telemetry probes on the release channel. datareview=chutten. r=janerik

* Make the probes available on the release channel.
* Migrate the probes to newer probe types.
* Rename the probes.
* Set email.
* Set expiry.

Differential Revision: https://phabricator.services.mozilla.com/D14237

--HG--
extra : moz-landing-system : lando